--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.15.3",
-    "react": "17.0.2",
-    "react-bootstrap": "1.6.1",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
   },
   "scripts": {
