--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.15.3",
+    "firebase": "^8.9.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-animated-weather": "^4.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
